<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="main_titel">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="setting">Настройки</string>
    <string name="settings_dark_mode">Темная тема</string>
    <string name="settings_share">Поделиться приложением</string>
    <string name="settings_support">Написать в поддержку</string>
    <string name="settings_user_agreement">Пользовательское соглашение</string>
    <string name="email">tsuhanov26@gmail.com</string>
    <string name="themeMail">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="messageMail">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="shareMessage">https://practicum.yandex.kz/android-developer/?from=catalog</string>
    <string name="userAgreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="errorInternet">Проблемы со связью</string>
    <string name="errorInternet2">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="buttonUpdate">Обновить</string>
    <string name="notFound">Ничего не нашлось</string>
    <string name="clearButton">Очистить историю</string>
    <string name="historyTitle">Вы искали</string>
    <string name="album">Альбом</string>
    <string name="duration">Длительность</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="trackTimer">0:00</string>
    <string name="mediateka">Медиатека</string>
    <string name="favoriteTracks">Избранные треки</string>
    <string name="playList">Плейлисты</string>
    <string name="emptyFavoriteTracks">Ваша медиатека пуста</string>
    <string name="newPlayList">Новый плейлист</string>
    <string name="emptyPlayList">Вы не создали\nни одного плейлиста</string>
    <string name="startTheTimer">00:00</string>
    <string name="checkingTheConnection">Проверьте подключение к интернету</string>
    <string name="serverError">Ошибка сервера</string>
    <string name="NewPlayList">Новый плейлист</string>
    <string name="NewPlayListName">Название*</string>
    <string name="NewPlayListDescription">Описание</string>
    <string name="CreateNewPlayList">Создать</string>
    <string name="addToPlayList">Добавить в плейлист</string>
    <string name="addTrackToPlayList">Добавлено в плейлист %1$s</string>
    <string name="trackAlreadyAdd">Трек уже добавлен в плейлист %1$s</string>
    <string name="finishCreatingPlaylist">Завершить создание плейлиста?</string>
    <string name="unsavedLost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="complete">Завершить</string>
    <string name="moreMenuShare">Поделиться</string>
    <string name="moreMenuEdit">Редактировать информацию</string>
    <string name="moreMenuDeletePlayList">Удалить плейлист</string>
    <string name="emptyTracksForPlayList">В данном плейлисте нету треков</string>
    <string name="save">Сохранить</string>
    <string name="deletePlayList">Удалить плейлист</string>
    <string name="doYouWontDeletePlayList">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="delete">Удалить</string>
    <string name="deleteTrackFromPlayList">Удалить трек</string>
    <string name="doYouWontDeleteTrack">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="edit">Редактировать</string>
</resources>