<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/blue">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_titel"
        android:layout_marginTop="14dp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_22sp"/>

    <Button
        android:id="@+id/button_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:backgroundTint="@color/white"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:text="@string/search"
        android:textSize="@dimen/text_size_22sp"
        android:textColor="@color/black"
        android:textAllCaps="false"
        app:cornerRadius='@dimen/button_radius'
        app:icon="@drawable/ic_search"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/black"/>

    <Button
        android:id="@+id/button_media"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:text="@string/media"
        android:textSize="@dimen/text_size_22sp"
        android:textColor="@color/black"
        android:textAllCaps="false"
        app:cornerRadius='@dimen/button_radius'
        app:icon="@drawable/ic_media"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconTint="@color/black"/>

    <Button
        android:id="@+id/button_setting"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginBottom="28dp"
        android:text="@string/setting"
        android:textSize="@dimen/text_size_22sp"
        android:textColor="@color/black"
        android:textAllCaps="false"
        app:cornerRadius='@dimen/button_radius'
        app:icon="@drawable/ic_setting"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/black"/>

</LinearLayout>