<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.fragment.SettingFragment"
    android:orientation="vertical"
    android:background="?attr/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TextStyleForSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="14dp"
            android:text="@string/setting"
            android:textSize="@dimen/text_size_22sp"
            android:gravity="center"
            android:fontFamily="@font/ys_display_medium"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_61dp"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        tools:ignore="UseSwitchCompatOrMaterialXml"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_dark_mode"
            android:gravity="center"
            style="@style/TextStyleForSettings"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            app:trackTint="@color/track_color"
            app:thumbTint="@color/thumb_color"
            app:trackTintMode="src_in"
            app:thumbTintMode="src_in"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_61dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/button_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/settings_share"
            android:layout_marginTop="@dimen/margin_21dp"
            android:layout_weight="1"
            style="@style/TextStyleForSettings"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_share"
            android:layout_marginStart="8dp"
            style="@style/ImageSettingStyle"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_61dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/button_support"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/settings_support"
            android:layout_marginTop="@dimen/margin_21dp"
            android:layout_weight="1"
            style="@style/TextStyleForSettings"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_support"
            android:layout_marginStart="8dp"
            style="@style/ImageSettingStyle"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_61dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/button_user_agreement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/settings_user_agreement"
            android:layout_marginTop="@dimen/margin_21dp"
            android:layout_weight="1"
            style="@style/TextStyleForSettings"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_forward"
            android:layout_marginStart="8dp"
            style="@style/ImageSettingStyle"/>

    </LinearLayout>



</LinearLayout>