<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/newPlayListFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mediateka.fragment.NewPlayListFragment"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/btnArrayBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_arrow_back"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        style="@style/TextStyleFromMediateka"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:text="@string/NewPlayList"
        app:layout_constraintBottom_toBottomOf="@+id/btnArrayBack"
        app:layout_constraintStart_toEndOf="@+id/btnArrayBack"
        app:layout_constraintTop_toTopOf="@+id/btnArrayBack" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_rectangle"
        android:padding="106dp"
        android:src="@drawable/add_photo"
        app:layout_constraintBottom_toTopOf="@+id/playListName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/playListName"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_rectangle"
        android:layout_marginTop="32dp"
        android:hint="@string/NewPlayListName"
        android:paddingHorizontal="@dimen/margin_16dp"
        android:paddingBottom="@dimen/margin_19dp"
        android:paddingTop="@dimen/margin_18dp"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginBottom="@dimen/margin_16dp"
        app:layout_constraintBottom_toTopOf="@+id/playListDescription"/>

    <EditText
        android:id="@+id/playListDescription"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_selector"
        android:layout_marginTop="@dimen/margin_16dp"
        android:hint="@string/NewPlayListDescription"
        android:paddingHorizontal="@dimen/margin_16dp"
        android:paddingBottom="@dimen/margin_19dp"
        android:paddingTop="@dimen/margin_18dp"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginBottom="170dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCreatePlayList"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCreatePlayList"
        style="@style/ButtonStyleForNewPlayList"
        android:background="@drawable/play_list_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CreateNewPlayList"
        android:layout_marginHorizontal="17dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>