<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".search.SearchActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/search_button_arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            app:tint="?attr/colorOnPrimary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="14dp"
            android:text="@string/search"
            android:textSize="@dimen/text_size_22sp"
            android:gravity="center"
            style="@style/TextStyleForSettings"
            android:fontFamily="@font/ys_display_medium"/>

    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:orientation="horizontal"
        android:background="@drawable/share_rounded"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:gravity="center_vertical"
        android:layout_marginBottom="@dimen/margin_16dp">

        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:inputType="text"
            android:hint="@string/search"
            android:lines="1"
            android:background="@drawable/share_rounded"
            android:layout_marginStart="13dp"
            android:drawableStart="@drawable/ic_search_16dp"
            android:drawablePadding="8dp"
            android:textColorHint="?attr/hintTextColor"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16sp" />

        <ImageView
            android:id="@+id/search_close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            android:visibility="gone"
            android:layout_marginEnd="@dimen/margin_12dp"
            android:layout_gravity="end|center_vertical"/>

    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginStart="@dimen/margin_13dp"
        android:layout_marginEnd="@dimen/margin_12dp"
        android:id="@+id/recycleView"
        android:visibility="gone"/>


    <LinearLayout
        android:id="@+id/errors"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_errors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_not_internet"
            android:layout_marginTop="102dp"
            android:layout_marginHorizontal="120dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextStyleForSearch"
            android:text="@string/errorInternet"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextStyleForSearch"
            android:text="@string/errorInternet2"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:gravity="center"/>

        <Button
            android:id="@+id/search_update_btt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonStyleForSearch"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginStart="134dp"
            android:layout_marginEnd="135dp"
            android:text="@string/buttonUpdate"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/search_not_found"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_not_found"
            android:layout_marginTop="102dp"
            android:layout_marginHorizontal="120dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextStyleForSearch"
            android:text="@string/notFound"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:gravity="center"/>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/search_history"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_search_title"
            style="@style/TextStyleForSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/historyTitle"
            android:layout_marginBottom="@dimen/margin_8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"
            android:layout_gravity="center"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_search_history"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_13dp"
            android:layout_marginEnd="@dimen/margin_12dp"
            app:layout_constraintTop_toBottomOf="@id/tv_search_title"
            app:layout_constraintBottom_toTopOf="@id/bt_search_clear"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            style="@style/ButtonStyleForSearch"
            android:id="@+id/bt_search_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clearButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/pb_search_history"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginTop="140dp"
        android:layout_marginHorizontal="158dp"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"/>


</LinearLayout>