<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.mediateka.fragment.PlayListInfo">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey">

        <ImageView
            android:id="@+id/icArrowBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_playlist"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:elevation="2dp"/>

        <ImageView
            android:id="@+id/imagePlayList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            android:src="@drawable/pc_placeholder_playlist" />

        <TextView
            android:id="@+id/playListName"
            style="@style/textStyleForPlayListInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Лучшие песни"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imagePlayList"
            android:layout_marginTop="24dp"
            android:layout_marginStart="@dimen/margin_16dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/playListDescription"
            style="@style/textStyleForPlayListInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Описание плейлиста"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/playListName"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_8dp"/>

        <TextView
            android:id="@+id/playListTotalTime"
            style="@style/textStyleForPlayListInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="300 минту"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/playListDescription"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"/>

        <ImageView
            android:id="@+id/icEllipse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_ellipse_playlist"
            app:layout_constraintStart_toEndOf="@id/playListTotalTime"
            app:layout_constraintTop_toTopOf="@id/playListTotalTime"
            app:layout_constraintBottom_toBottomOf="@id/playListTotalTime"
            android:layout_marginStart="5dp"/>

        <TextView
            android:id="@+id/playListTrackCount"
            style="@style/textStyleForPlayListInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="98 треков"
            app:layout_constraintStart_toEndOf="@id/icEllipse"
            app:layout_constraintTop_toTopOf="@id/icEllipse"
            app:layout_constraintBottom_toBottomOf="@id/icEllipse"
            android:layout_marginStart="5dp"/>

        <ImageView
            android:id="@+id/icShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playListTotalTime"
            android:src="@drawable/ic_share_playlist"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="16dp" />

        <ImageView
            android:id="@+id/moreMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/icShare"
            app:layout_constraintTop_toTopOf="@id/icShare"
            app:layout_constraintBottom_toBottomOf="@id/icShare"
            android:src="@drawable/ic_more_playlist"
            android:layout_marginStart="@dimen/margin_16dp"
           />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        android:background="@drawable/rectangle_media"
        app:behavior_peekHeight="285dp"
        android:layout_marginTop="24dp"
        app:behavior_hideable="false">

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:background="@drawable/rectangle"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/emptyTracks"
            style="@style/textStyleForEmptyTrackList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emptyTracksForPlayList"
            android:layout_gravity="center_horizontal"

            android:layout_marginTop="50dp"
            android:visibility="gone"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTrackPlayList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

    <View android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        android:background="@drawable/rectangle_media"
        app:behavior_peekHeight="416dp"
        app:behavior_hideable="true">

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:background="@drawable/rectangle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"/>

        <ImageView
            android:id="@+id/moreMenuImage"
            android:layout_width="@dimen/picture_45dp"
            android:layout_height="@dimen/picture_45dp"
            android:layout_marginTop="32dp"
            android:layout_marginStart="@dimen/margin_13dp"
            android:clipToOutline="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/moreMenuPlayListName"
            style="@style/textStyleForNamePlayList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Лучшие песни"
            app:layout_constraintStart_toEndOf="@+id/moreMenuImage"
            app:layout_constraintTop_toTopOf="@+id/moreMenuImage"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/moreMenuTrackCount"
            style="@style/textStyleForCountPlayList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="98 треков"
            app:layout_constraintTop_toBottomOf="@+id/moreMenuPlayListName"
            app:layout_constraintStart_toStartOf="@+id/moreMenuPlayListName"
            app:layout_constraintBottom_toBottomOf="@+id/moreMenuImage"/>

        <TextView
            android:id="@+id/moreMenuShare"
            style="@style/textStyleForNamePlayList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moreMenuShare"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moreMenuImage"
            android:layout_marginTop="29dp"
            android:layout_marginStart="@dimen/margin_16dp"/>

        <TextView
            android:id="@+id/moreMenuEdit"
            style="@style/textStyleForNamePlayList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moreMenuEdit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moreMenuShare"
            android:layout_marginTop="42dp"
            android:layout_marginStart="@dimen/margin_16dp"/>

        <TextView
            android:id="@+id/moreMenuDeletePlayList"
            style="@style/textStyleForNamePlayList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moreMenuDeletePlayList"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moreMenuEdit"
            android:layout_marginTop="42dp"
            android:layout_marginStart="@dimen/margin_16dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>